Created Restaurant page and model, tested with in-memory data

--- a/FoodApp.Data/FoodApp.Data.csproj
+++ b/FoodApp.Data/FoodApp.Data.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FoodApp.Data\FoodApp.Data.csproj" />
+    <ProjectReference Include="..\FoodApp.Core\FoodApp.Core.csproj" />
   </ItemGroup>
 
 </Project>
