Created edit form layout; added libman.json for lib deps

--- a/FoodApp/FoodApp.csproj
+++ b/FoodApp/FoodApp.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\FoodApp.Data\FoodApp.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
