--- a/FoodApp/appsettings.json
+++ b/FoodApp/appsettings.json
@@ -7,5 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Message": "Hello from appsettings!"
+  "Message": "Hello from appsettings!",
+  "ConnectionStrings": {
+    "FoodAppDb": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=FoodApp;Integrated Security=True;"
+  }
 }
